--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,22 @@
 *.pot
 *.pyc
 local_settings.py
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/other.xml
+.idea/php.xml
+.idea/scopes/scope_settings.xml
+.idea/sqldialects.xml
+.idea/testrunner.xml
+.idea/uiDesigner.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.settings/.jsdtscope
+.settings/org.eclipse.wst.jsdt.ui.superType.container
+.settings/org.eclipse.wst.jsdt.ui.superType.name
+opensn.eml
+opensn.iml
